# R.nvim

./: .busted  .clang-format  .gitignore  .gitmodules  .styluaignore  CONTRIBUTING.md  Makefile  README.md  air.toml  flake.nix  hi-world.txt  selene.toml  stylua.toml  vim.toml  vim.yml
R/: before_nrs.R  common_global.vim  extern_term.vim  nvimbuffer.vim  nvimr.py  nvimrcom.tex  osx.vim  pdf_evince_back.py  pdf_evince_forward.py  pdf_generic.vim  pdf_init.vim  pdf_okular.vim  pdf_qpdfview.vim  pdf_zathura.vim  rnw_fun.vim  rstudio.vim  start_nrs.vim  start_r.vim  tmux.vim  tmux_split.vim  unix.vim  (+1 more)
resources/tree-sitter-rout/: CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  go.mod  grammar.js  package.json  setup.py
resources/tree-sitter-rout/bindings/go/: binding.go
resources/tree-sitter-rout/bindings/node/: index.js
resources/tree-sitter-rout/bindings/python/tests/: test_binding.py
resources/tree-sitter-rout/bindings/python/tree_sitter_rout/: binding.c
resources/tree-sitter-rout/bindings/rust/: lib.rs
resources/tree-sitter-rout/bindings/swift/TreeSitterRoutTests/: TreeSitterRoutTests.swift
resources/tree_sitter_rout/: Package.swift  README.md  grammar.js  pyproject.toml  tree-sitter.json
resources/tree_sitter_rout/bindings/c/: tree-sitter-rout.pc.in
resources/tree_sitter_rout/bindings/go/: binding_test.go
resources/tree_sitter_rout/bindings/node/: binding.cc
resources/tree_sitter_rout/bindings/python/tree_sitter_rout/: __init__.py
resources/tree_sitter_rout/bindings/rust/: build.rs
resources/tree_sitter_rout/bindings/swift/TreeSitterRout/: rout.h
(+256 files in other folders)
